# tpi

./: .gitignore  Cargo.toml  LICENSE.md  README.md  gleam.toml  manifest.toml
.install/: install.sh
example/: hello_world.srb  unix_only.srb  win_only.srb
examples/: hello_world.srb
src/: erl_wrapper.gleam  main.rs  package_utilities.gleam  package_utilities.rs  printer.gleam  printer.rs  tpi.gleam
src/erlang/: tpi_erlang.erl
utilities/: install.sh  package.sh
