[package]
name = "tpi"
version = "1.2.0"
edition = "2021"
description = "The Package Index"

[dependencies]
anyhow = "1.0.97"
colored = "3.0.0"
reqwest = { version = "0.12.13", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sorbet_kvp = "1.0.1"
tempfile = "3.18.0"
